--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body onscroll="onScroll()" class="menuExpended">
+  <body onscroll="onScroll()" class="">
     <nav id="navigation" class="">
       <div class="container">
         <a class="logo" href="#">
@@ -68,9 +68,9 @@
 
         <div class="menu">
           <ul class="menuLinks">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a onclick="closeMenu()" href="#home">Início</a></li>
+            <li><a onclick="closeMenu()" href="#services">Serviços</a></li>
+            <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
           </ul>
           <a class="button" href="#">AGENDE SUA CONSULTA</a>
           <ul class="socialLinks">
@@ -215,7 +215,7 @@
         </button>
       </div>
     </nav>
-    <header class="container">
+    <header id="home" class="container">
       <h4>BOAS-VINDAS A DOCTOR CARE 👋</h4>
       <h1>Assistência médica simplificada para todos</h1>
       <p>
@@ -260,6 +260,154 @@
         </div>
       </div>
     </header>
+
+    <section id="services">
+      <div class="container">
+        <h4>SERVIÇOS</h4>
+        <h2>Como podemos ajudá-lo a se sentir melhor?</h2>
+        <div class="cards">
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Problemas digestivos</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Saúde Hormonal</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Bem-estar mental</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Cuidados Pediátricos</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Autoimune e Inflamação</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+          <div class="card">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+              <path
+                d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                stroke="#00856F"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            <h3>Saúde do Coração</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./sripts.js"></script>
   </body>
 </html>
