--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav id="navigation">
       <div class="container">
-        <a class="logo" href="#" alt="Logo DoctorCare">
+        <a class="logo" href="#">
           <svg
             width="133"
             height="18"
